Fix background on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,10 +31,17 @@ body {
     max-width: 1920px;
     margin: 0 auto;
     overflow-x: hidden;
+}
+
+.fixed-bg {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100%;
     background: url(../images/st4t-bg.png)no-repeat;
     background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background-position: top;
+    z-index: -10;
 }
 
 a, a:hover, a:active, a:focus {
@@ -224,7 +231,7 @@ iframe {
     max-width: 100%;
 }
 
-section:nth-child(odd):not(.welcome-hero) {
+section:nth-child(even) {
     background: rgba(0, 0, 0, .4);
     padding-top: 50px;
 }
